--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link href="StyleSheet.css" rel="stylesheet" />
-    <link href="StyleSheet2.css" rel="stylesheet" />
-    <link href="StyleSheet3.css" rel="stylesheet" />
-    <title></title>
+    <href ="https://www.freepik.com/free-photo/blank-paperwork-template-for-designers-responsive-design-mockup-on-vintage-wooden-background-paper-letterhead-coffee-cup-smartphone-pencil-and-headphones-on-wooden-table-background-top-view_1187426.htm">
+        Designed by Freepik</>
+        <link href="StyleSheet3.css" rel="stylesheet" />
+        <link href="StyleSheet2.css" rel="stylesheet" />
+        <link href="StyleSheet4.css" rel="stylesheet" />
+        <title></title>
 </head>
 <body>
 
     <div class="nav">
         <div class="nav-header">
             <div class="nav-title">
-                Full-Stack .NETDeveloper
+                .NETDeveloper
             </div>
         </div>
         <div class="nav-btn">
@@ -34,10 +36,15 @@
 
     <div class="bgimg-1">
 
-        <h1>Nick Domitio</h1>
+        <h1>
+            Nick Domitio
+        </h1>
 
 
     </div>
+
+    <div class="skills">Skills</div>
+
     <div class="first">
 
         <div class="wrapper">
@@ -56,7 +63,25 @@
                 <i class="right"></i>
             </div>
         </div>
-        <h3>Skills</h3>
+
+        <div class="wrapper">
+            <div class="cube">
+                <b class="front">Collaboration</b>
+                <b class="back">LeaderShip</b>
+                <b class="top">Ingenuity</b>
+                <b class="bottom"></b>
+                <b class="left">Tenacity</b>
+                <b class="right">Creativity</b>
+                <i class="front"></i>
+                <i class="back"></i>
+                <i class="top"></i>
+                <i class="bottom"></i>
+                <i class="left"></i>
+                <i class="right"></i>
+            </div>
+        </div>
+
+
         <div class="wrapper">
             <div class="cube">
                 <b class="front">FlexBox</b>
@@ -76,8 +101,12 @@
     </div>
 
     <div class="bgimg-2">
-        <div class="caption">
-            <span class="border">CONTENT</span>
+
+
+        <div class="aboutme">
+            <br />About Me<br /><br />They say there are two days in your life: the day you are born, and the day you discover what you were born for.
+            For myself, that second day arrived when I found coding.  To gain knowledge and industry acumen, I enrolled in the We Can Code It
+            bootcamp during the Spring of '18.  I am currently working hard on making my passion my new career.
         </div>
     </div>
 
@@ -87,11 +116,7 @@
         </div>
     </div>
 
-    <div class="bgimg-3">
-        <div class="caption">
-            <span class="border">CONTENTCONTENTCONTENT</span>
-        </div>
-    </div>
+
 
     <div class="second">
         <div class="third">
