--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <href ="https://www.freepik.com/free-photo/blank-paperwork-template-for-designers-responsive-design-mockup-on-vintage-wooden-background-paper-letterhead-coffee-cup-smartphone-pencil-and-headphones-on-wooden-table-background-top-view_1187426.htm">
         Designed by Freepik</>
-        <link href="StyleSheet3.css" rel="stylesheet" />
+        <link href="StyleSheet.css" rel="stylesheet" />
         <link href="StyleSheet2.css" rel="stylesheet" />
+        <link href="StyleSheet3.css" rel="stylesheet" />
         <link href="StyleSheet4.css" rel="stylesheet" />
         <title></title>
 </head>
@@ -42,9 +43,9 @@
 
 
     </div>
-
-    <div class="skills">Skills</div>
-
+    <div class="skillscontainer">
+        <div class="skills">Skills</div>
+    </div>
     <div class="first">
 
         <div class="wrapper">
@@ -54,7 +55,7 @@
                 <b class="top">TDD</b>
                 <b class="bottom">OOP</b>
                 <b class="left">HTML5</b>
-                <b class="right">CSS#</b>
+                <b class="right">CSS3</b>
                 <i class="front"></i>
                 <i class="back"></i>
                 <i class="top"></i>
@@ -100,28 +101,52 @@
         </div>
     </div>
 
+    <div class="skills">About Me</div>
+
     <div class="bgimg-2">
 
 
         <div class="aboutme">
-            <br />About Me<br /><br />They say there are two days in your life: the day you are born, and the day you discover what you were born for.
+            <br /><br />They say there are two days in your life: the day you are born, and the day you discover what you were born for.
             For myself, that second day arrived when I found coding.  To gain knowledge and industry acumen, I enrolled in the We Can Code It
             bootcamp during the Spring of '18.  I am currently working hard on making my passion my new career.
         </div>
     </div>
 
-    <div class="fourth">
-        <div class="fifth">
-            <p>CONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENT</p>
-        </div>
+    <div class="skills">Projects</div>
+
+    <div class="container">
+        <section class="runner">
+
+            <div>
+                <p>This is a Headline</p>
+                <p>This is some text This is some text This is some text This is some text This is some text This is some text This is some text  This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text</p>
+                <a class="cta" href="#">Read More</a>
+            </div>
+
+        </section>
     </div>
+    <div class="container">
+        <section class="runner">
 
+            <div>
+                <p>This is a Headline</p>
+                <p>This is some text This is some text This is some text This is some text This is some text This is some text This is some text  This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text</p>
+                <a class="cta" href="#">Read More</a>
+            </div>
 
+        </section>
+    </div>
+    <div class="container">
+        <section class="runner">
 
-    <div class="second">
-        <div class="third">
-            <p>CONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENTCONTENT</p>
-        </div>
+            <div>
+                <p>This is a Headline</p>
+                <p>This is some text This is some text This is some text This is some text This is some text This is some text This is some text  This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text</p>
+                <a class="cta" href="#">Read More</a>
+            </div>
+
+        </section>
     </div>
 
     <div class="bgimg-1">
