--- a/index.html
+++ b/index.html
@@ -119,31 +119,32 @@
         <section class="runner">
 
             <div>
-                <p>This is a Headline</p>
-                <p>This is some text This is some text This is some text This is some text This is some text This is some text This is some text  This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text</p>
-                <a class="cta" href="#">Read More</a>
+                <p>Virtual Pet</p>
+                <p>C# project applying use of Object Oriented Programing to create an application similar to a handheld digital device.</p>
+                <a class="cta" href="https://github.com/ndomitio">GitHub</a>
+            </div>
+            
+        </section>
+    </div>
+    <div class="container2">
+        <section class="runner2">
+
+            <div>
+                <p>VP Shelter</p>
+                <p>C# project at the end of the first 4 weeks of back-end programming.  
+                Applied advanced concepts of OOP to expand on the original Virtual Pet Program. </p>
+                <a class="cta" href="https://github.com/ndomitio">GitHub</a>
             </div>
 
         </section>
     </div>
-    <div class="container">
-        <section class="runner">
+    <div class="container3">
+        <section class="runner3">
 
             <div>
-                <p>This is a Headline</p>
-                <p>This is some text This is some text This is some text This is some text This is some text This is some text This is some text  This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text</p>
-                <a class="cta" href="#">Read More</a>
-            </div>
-
-        </section>
-    </div>
-    <div class="container">
-        <section class="runner">
-
-            <div>
-                <p>This is a Headline</p>
-                <p>This is some text This is some text This is some text This is some text This is some text This is some text This is some text  This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text This is some text</p>
-                <a class="cta" href="#">Read More</a>
+                <p>Tuscany Villa</p>
+                <p>This was a project that incorporated HTML5 and CSS3.  We were given a website mockup and had to recreate via CSS grid.</p>
+                <a class="cta" href="https://github.com/ndomitio">GitHub</a>
             </div>
 
         </section>
