--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
         </div>
         <input type="checkbox" id="nav-check">
         <div class="nav-links">
-            <a href="//github.io/jo_geek" target="_blank">Github</a>
-            <a href="http://stackoverflow.com/users/4084003/" target="_blank">LinkedIn</a>
-            <a href="https://in.linkedin.com/in/jonesvinothjoseph" target="_blank">Projects</a>
-            <a href="https://codepen.io/jo_Geek/" target="_blank">Skills</a>
+            <a href="https://github.com/ndomitio" target="_blank">Github</a>
+            <a href="https://www.linkedin.com/in/nicholas-domitio-0522b112b/target="_blank">LinkedIn</a>
+            <a href="https://github.com/ndomitio" target="_blank">Projects</a>
             <a href="https://jsfiddle.net/user/jo_Geek/" target="_blank">Contact</a>
         </div>
     </div>
