--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link href="StyleSheet2.css" rel="stylesheet" />
         <link href="StyleSheet3.css" rel="stylesheet" />
         <link href="StyleSheet4.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <title></title>
 </head>
 <body>
@@ -28,9 +30,9 @@
         <input type="checkbox" id="nav-check">
         <div class="nav-links">
             <a href="https://github.com/ndomitio" target="_blank">Github</a>
-            <a href="https://www.linkedin.com/in/nicholas-domitio-0522b112b/target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/nicholas-domitio-0522b112b/target=" _blank">LinkedIn</a>
             <a href="https://github.com/ndomitio" target="_blank">Projects</a>
-            <a href="https://jsfiddle.net/user/jo_Geek/" target="_blank">Contact</a>
+            <a href="#contactpage">Contact</a>
         </div>
     </div>
 
@@ -120,9 +122,9 @@
             <div>
                 <p>Virtual Pet</p>
                 <p>C# project applying use of Object Oriented Programing to create an application similar to a handheld digital device.</p>
-                <a class="cta" href="https://github.com/ndomitio">GitHub</a>
+                <a class="cta" href="https://github.com/ndomitio/VirtualPet1">GitHub</a>
             </div>
-            
+
         </section>
     </div>
     <div class="container2">
@@ -130,9 +132,11 @@
 
             <div>
                 <p>VP Shelter</p>
-                <p>C# project at the end of the first 4 weeks of back-end programming.  
-                Applied advanced concepts of OOP to expand on the original Virtual Pet Program. </p>
-                <a class="cta" href="https://github.com/ndomitio">GitHub</a>
+                <p>
+                    C# project at the end of the first 4 weeks of back-end programming.
+                    Applied advanced concepts of OOP to expand on the original Virtual Pet Program.
+                </p>
+                <a class="cta" href="https://github.com/ndomitio/VPShelter">GitHub</a>
             </div>
 
         </section>
@@ -143,16 +147,19 @@
             <div>
                 <p>Tuscany Villa</p>
                 <p>This was a project that incorporated HTML5 and CSS3.  We were given a website mockup and had to recreate via CSS grid.</p>
-                <a class="cta" href="https://github.com/ndomitio">GitHub</a>
+                <a class="cta" href=https://github.com/ndomitio/TuscanyVilla">GitHub</a>
             </div>
 
         </section>
     </div>
-
+    <a name="contactpage"></a>
     <div class="bgimg-1">
-        <div class="caption">
-            <span class="border">COOL!</span>
-        </div>
+
+        <a href="https://www.linkedin.com/in/nicholas-domitio-0522b112b/target=" class="fa fa-linkedin fa-3x"></a>
+        <a href="https://github.com/ndomitio" class="fa fa-github fa-3x"></a>
+        <a href="https://www.instagram.com/nick_domitio/" class="fa fa-instagram fa-3x"></a>
+
+
     </div>
 
 
