--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <href ="https://www.freepik.com/free-photo/blank-paperwork-template-for-designers-responsive-design-mockup-on-vintage-wooden-background-paper-letterhead-coffee-cup-smartphone-pencil-and-headphones-on-wooden-table-background-top-view_1187426.htm">
-        Designed by Freepik</>
+        
         <link href="StyleSheet.css" rel="stylesheet" />
         <link href="StyleSheet2.css" rel="stylesheet" />
         <link href="StyleSheet3.css" rel="stylesheet" />
@@ -161,7 +161,7 @@
 
 
     </div>
-
+    <div class="footer">Created and designed by: Nicholas Domitio 2018</div>
 
 </body>
 </html>
