--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <href ="https://www.freepik.com/free-photo/blank-paperwork-template-for-designers-responsive-design-mockup-on-vintage-wooden-background-paper-letterhead-coffee-cup-smartphone-pencil-and-headphones-on-wooden-table-background-top-view_1187426.htm">
-        
-        <link href="StyleSheet.css" rel="stylesheet" />
         <link href="StyleSheet2.css" rel="stylesheet" />
+        <link href="StyleSheet.css" rel="stylesheet" />
+
         <link href="StyleSheet3.css" rel="stylesheet" />
         <link href="StyleSheet4.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,11 +30,14 @@
         <input type="checkbox" id="nav-check">
         <div class="nav-links">
             <a href="https://github.com/ndomitio" target="_blank">Github</a>
-            <a href="https://www.linkedin.com/in/nicholas-domitio-0522b112b/target=" _blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/nicholas-domitio-0522b112b/" target="_blank">LinkedIn</a>
             <a href="https://github.com/ndomitio" target="_blank">Projects</a>
-            <a href="#contactpage">Contact</a>
+            <a href="#contactpage" target="_blank">Contact</a>
         </div>
     </div>
+
+
+
 
     <div class="bgimg-1">
 
@@ -155,9 +158,9 @@
     <a name="contactpage"></a>
     <div class="bgimg-1">
 
-        <a href="https://www.linkedin.com/in/nicholas-domitio-0522b112b/target=" class="fa fa-linkedin fa-3x"></a>
-        <a href="https://github.com/ndomitio" class="fa fa-github fa-3x"></a>
-        <a href="https://www.instagram.com/nick_domitio/" class="fa fa-instagram fa-3x"></a>
+        <a1 href="https://www.linkedin.com/in/nicholas-domitio-0522b112b/target=" class="fa fa-linkedin fa-3x"></a1>
+        <a1 href="https://github.com/ndomitio" class="fa fa-github fa-3x"></a1>
+        <a1 href="https://www.instagram.com/nick_domitio/" class="fa fa-instagram fa-3x"></a1>
 
 
     </div>
