--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
         <link rel="stylesheet"
               href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css" />
+        <script src="JavaScript.js"></script>
 
         <title></title>
 </head>
@@ -46,10 +47,7 @@
 
     <div class="bgimg-1">
 
-        <h1>
-            Nick Domitio
-        </h1>
-
+        <h1> <a href="" class="typewrite" data-period="2000" data-type='["Nick Domitio."]'> <span class="wrap"> </span> </a> </h1>
 
     </div>
     <div class="skillscontainer">
